--- a/templates/index.html
+++ b/templates/index.html
@@ -2,25 +2,91 @@
 <html lang="en">
 <head>
     <title>SafeWays API Entry Point</title>
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+
 </head>
 <body>
-<h1>SafeWays Safepath API</h1>
-<p> Beta API that finds the safest path for pedestrians and bicyclists, made for City of Los Angeles residents using LA
-    City Collision Data, Google's Directions API, and Google's LocationOnEdge and/or ContainsLocation algorithm </p>
+<div align="center">
+    <h1>SafeWays Safepath API</h1>
+    <p> Beta API that finds the safest path for pedestrians and bicyclists, made for City of Los Angeles residents using
+        LA
+        City Collision Data, Google's Directions API, and Google's LocationOnEdge and/or ContainsLocation algorithm </p>
+    <br>
+    <p>You can check out the API code <a href="https://github.com/lgon070/safeways_api">here</a></p>
+    <p>You can check out SafeWays' code <a href="https://github.com/ehern251/safe_ways">here</a></p>
+</div>
 <br>
-<p>You can check out the API code <a href="https://github.com/lgon070/safeways_api">here</a></p>
-<p>You can check out SafeWays' code <a href="https://github.com/ehern251/safe_ways">here</a></p>
+<div align="center">
+    <h4>Artificial Intelligence for Smart Cities
+    </h4><h5>Sponsored by TOYOTA and LA City</h5>
+    <p>Team</p>
+
+    <ul style="display: table; margin: 0 auto;" class="list-group">
+        <li class="list-group-item">Luis Gonzalez</li>
+        <li class="list-group-item">Edgar Hernandez</li>
+        <li class="list-group-item">Lynne Tien</li>
+        <li class="list-group-item">Gunjan Kc</li>
+        <li class="list-group-item">Jason Fan</li>
+    </ul>
+    <br>
+    <p>Advisor</p>
+    <ul style="display: table; margin: 0 auto;" class="list-group">
+        <li class="list-group-item">Mohammad Pourhomayoun</li>
+    </ul>
+</div>
 <br>
-<h4>Artificial Intelligence for Smart Cities
-</h4><h5>Sponsored by TOYOTA and LA City</h5>
-<p>Team</p>
-<ul>
-    <li>Luis Gonzalez</li>
-    <li>Edgar Hernandez</li>
-    <li>Lynne Tien</li>
-    <li>Gunjan Kc</li>
-    <li>Jason Fan</li>
-</ul>
-<p>Advisor</p><ul><li>Mohammad Pourhomayoun</li></ul>
+<div align="center">
+    <h4>How to use this API?</h4>
+    <table class="table table-bordered" style="width:100%">
+        <tr>
+            <th>Parameter</th>
+            <th>Description</th>
+            <th>Example</th>
+            <th>Required</th>
+        </tr>
+        <tr>
+            <td>origin</td>
+            <td>latitude and longitude of the origin in decimal degrees separated by a comma.</td>
+            <td>origin=34.052235,-118.243683</td>
+            <td>required</td>
+        </tr>
+        <tr>
+            <td>destination</td>
+            <td>latitude and longitude of the destination in decimal degrees separated by a comma.</td>
+            <td>destination=34.059238,-118.279068</td>
+            <td>required</td>
+        </tr>
+        <tr>
+            <td>method</td>
+            <td>method of navigation (walking or bicycling)</td>
+            <td>method=walking or method= bicycling</td>
+            <td>required</td>
+        </tr>
+        <tr>
+            <td>use_edge</td>
+            <td>indicates whether API will use ContainsLocation (0) or LocationOnEdge (1) algorithm</td>
+            <td>use_edge=0 or use_edge=1</td>
+            <td>optional (will default to use_edge=1 if parameter not provided)</td>
+        </tr>
+        <tr>
+            <td>tolerance</td>
+            <td>indicates the tolerance level of the LocationOnEdge algorithm (does not affect ContainsLocation</td>
+            <td>tolerance=30</td>
+            <td>optional (will default to 20 if parameter is not provided or falls outside 5[inclusive] -
+                150[inclusive])
+            </td>
+        </tr>
+
+    </table>
+</div>
+<br>
+<div align="center">
+    <h6>Full Example</h6>
+    <p>
+        <a href="https://polar-hollows-98491.herokuapp.com/safepath?origin=34.053715,-118.242653&destination=34.059238,-118.279068&method=walking">https://polar-hollows-98491.herokuapp.com/safepath?origin=34.053715,-118.242653&destination=34.059238,-118.279068&method=walking</a>
+    </p>
+</div>
 </body>
 </html>
