gcloud app engine update.
Heroku files moved to appropriate folder

--- a/templates/index.html
+++ b/templates/index.html
@@ -83,9 +83,9 @@
 </div>
 <br>
 <div align="center">
-    <h6>Full Example</h6>
+    <h6>Full Example of a Valid API Call</h6>
     <p>
-        <a href="https://polar-hollows-98491.herokuapp.com/safepath?origin=34.053715,-118.242653&destination=34.059238,-118.279068&method=walking">https://polar-hollows-98491.herokuapp.com/safepath?origin=34.053715,-118.242653&destination=34.059238,-118.279068&method=walking</a>
+        <a href="https://polar-hollows.wl.r.appspot.com/safepath?origin=34.053715,-118.242653&destination=34.059238,-118.279068&method=walking">https://polar-hollows.wl.r.appspot.com/safepath?origin=34.053715,-118.242653&destination=34.059238,-118.279068&method=walking</a>
     </p>
 </div>
 </body>
