api now return duration and distance
driving now supported

--- a/templates/index.html
+++ b/templates/index.html
@@ -60,8 +60,8 @@
         </tr>
         <tr>
             <td>method</td>
-            <td>method of navigation (walking or bicycling)</td>
-            <td>method=walking or method= bicycling</td>
+            <td>method of navigation (walking, bicycling, or driving)</td>
+            <td>method=walking or method=bicycling or method=driving</td>
             <td>required</td>
         </tr>
         <tr>
